# EurekanBestiary

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  scan-csv.js  snowpack.config.mjs  vercel.json
.github/workflows/: main.yml
json-editor/: App.svelte  Form.svelte
ovnibackend/: Cargo.toml
ovnibackend/src/: main.rs
public/: index.css  index.html
src/: App.svelte  EnemyList.svelte  Entry.svelte  Fairies.svelte  Forecast.svelte  NewApp.svelte  OvniTimer.svelte  Tracker.svelte  anemos.bestiary.js  anemos.bestiary.json  backend.js  bestiary.js  bestiary.json  ew.js  hydatos.bestiary.js  hydatos.bestiary.json  index.js  ovnibackend.js  pagos.bestiary.js  pagos.bestiary.json  pyros.bestiary.js  pyros.bestiary.json  redirect.js  stores.js  times.js  util.js
src/components/: Element.svelte  FairyMap.svelte  FairySidebar.svelte  Icon.svelte  MarkerButton.svelte  OvniTracker.svelte  ZoneForecast.svelte  ZoneWeather.svelte
src/components/components/: ZoneForecast.svelte
src/custom_stores/: fairy_store.js
