[package]
name = "ovnibackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11.0"
async-tungstenite = { version = "0.17.2", features = ["async-std-runtime"] }
chrono = "0.4.19"
futures = "0.3.21"
miniserde = "0.1.24"
nanoid = "0.4.0"
redis = "0.21.5"
